objects/Distributor__c.object
<CustomObject>
    <fields>
        <fullName>Bayer_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bayer Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Distributors</relationshipLabel>
        <relationshipName>Distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDistributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentDistributor</label>
        <referenceTo>Distributor__c</referenceTo>
        <relationshipLabel>Distributors</relationshipLabel>
        <relationshipName>Distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distributor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>